--- a/controlefinancas/style.css
+++ b/controlefinancas/style.css
@@ -8,6 +8,11 @@
     outline: none;
 }
 
+h1{
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
 body{
     height: 100vh;
     display: flex;
@@ -19,7 +24,7 @@ main{
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;       
 }
 
 .resume{
