--- a/formulario/style.css
+++ b/formulario/style.css
@@ -15,12 +15,14 @@ body{
 }
 
 main{
+    position: absolute;
     width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 20px;
+    margin-top: 20px;
 }
 
 .divAltura, .divPeso, .divCalc{
