--- a/formulario/style.css
+++ b/formulario/style.css
@@ -5,6 +5,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 body{
     width: 100vw;
     height: 100vw;
