--- a/controlefinancas/style.css
+++ b/controlefinancas/style.css
@@ -8,6 +8,11 @@
     outline: none;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 h1{
     margin-top: 20px;
     margin-bottom: 50px;
@@ -120,4 +125,15 @@ i{
 .columType{
     width: 80px;
     text-align: center;
+}
+
+button{
+    cursor: pointer;
+    background-color: #6f00ff;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
 }
