--- a/formulario/style.css
+++ b/formulario/style.css
@@ -28,6 +28,8 @@ main{
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .divAltura, .divPeso, .divCalc{
